--- a/etc/PCS.cfg
+++ b/etc/PCS.cfg
@@ -84,3 +84,6 @@ PCSCore.CollectorSolveProblemGateWaitTime=6000
 Gate.GateOpenTime=2000
 Gate.GateCloseTime=1500
 
+# Pay Pay Pay
+
+AppKickstarter.PayMachineNumber=3
