Define Vacancy Total Floor number and Available Parking Spaces

--- a/etc/PCS.cfg
+++ b/etc/PCS.cfg
@@ -84,6 +84,15 @@ PCSCore.CollectorSolveProblemGateWaitTime=6000
 Gate.GateOpenTime=2000
 Gate.GateCloseTime=1500
 
+# Vacancy Properties
+#-----------------------------------------------------------
+# VacancyLevelSpaces -- amount of available parking spaces for each level
+# TotalFloorNumber -- amount of total floor number
+#-----------------------------------------------------------
+Vacancy.Level1=2000
+Vacancy.Level2=2000
+TotalFloorNumber=2
+
 # Pay Pay Pay
 
 AppKickstarter.PayMachineNumber=2
