Update Dispatcher Remove Ticket Response

--- a/etc/PCS.cfg
+++ b/etc/PCS.cfg
@@ -73,7 +73,7 @@ Ticket.calculateFeeCoefficient=0.000001
 #-----------------------------------------------------------
 PCSCore.PollTime=60000
 PCSCore.OpenCloseGateTime=5000
-PCSCore.CollectorSolveProblemGateWaitTime=6000
+PCSCore.GateOpenWaitTime=6000
 
 
 # Gate Properties
