--- a/etc/PCS.cfg
+++ b/etc/PCS.cfg
@@ -63,7 +63,7 @@ Timer.SimulationSpeed=10
 # exitTimeCoefficient -- car should drive out in currentTime+exitTimeCoefficient
 #-----------------------------------------------------------
 Ticket.exitTimeCoefficient=1000000
-Ticket.calculateFeeCoefficient=0.000001
+Ticket.calculateFeeCoefficient=5
 
 # PCS Core Properties
 #-----------------------------------------------------------
